--- a/teacher-dashboard.html
+++ b/teacher-dashboard.html
@@ -4,86 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>لوحة تحكم المعلم</title>
-    <link rel="stylesheet" href="styles.css">
-    
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f4f8;
+            text-align: center;
+            padding-top: 50px;
+        }
+        h1 {
+            color: #004e92;
+        }
+        .btn {
+            background-color: #ff7e5f;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            font-size: 1.5em;
+            border-radius: 5px;
+        }
+        .btn:hover {
+            background-color: #feb47b;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>مرحبا بك، معلم أكاديمية التبيان</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">الرئيسية</a></li>
-                    <li><a href="profile.html">الملف الشخصي</a></li>
-                    <li><a href="logout.html">تسجيل الخروج</a></li>
-                </ul>
-            </nav>
-        </div>
+        <h1>مرحبًا، [اسم المعلم]</h1>
+        <button class="btn" onclick="window.location.href='logout.html'">تسجيل الخروج</button>
     </header>
-    <main>
-        <div class="container">
-            <h2>لوحة تحكم المعلم</h2>
-            <p>هنا يمكنك مشاهدة مواعيد الحصص الخاصة بك.</p>
-            <div id="schedule" class="schedule"></div> <!-- سيتم عرض مواعيد الحصص هنا -->
-        </div>
-    </main>
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 أكاديمية التبيان</p>
-        </div>
-    </footer>
 
-    <script>
-        // إعدادات Firebase
-const firebaseConfig = {
-  apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
-  authDomain: "taleem-6c9b2.firebaseapp.com",
-  projectId: "taleem-6c9b2",
-  storageBucket: "taleem-6c9b2.firebasestorage.app",
-  messagingSenderId: "746506526783",
-  appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
-        // تهيئة Firebase
-        const app = firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
-        const firestore = firebase.firestore();
+    <section>
+        <h2>طلابك</h2>
+        <!-- تفاصيل الطلاب -->
+    </section>
 
-        // التحقق من تسجيل الدخول
-        auth.onAuthStateChanged((user) => {
-            if (user) {
-                // استرجاع بيانات المعلم من Firestore
-                const userId = user.uid;
-                const teacherRef = firestore.collection("teachers").doc(userId);
+    <script type="module">
+        import { getAuth, signOut } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
 
-                teacherRef.get().then((doc) => {
-                    if (doc.exists) {
-                        // عرض مواعيد الحصص في الصفحة
-                        const data = doc.data();
-                        const schedule = data.schedule || [];
-                        
-                        const scheduleDiv = document.getElementById("schedule");
-                        if (schedule.length > 0) {
-                            let htmlContent = "<ul>";
-                            schedule.forEach(session => {
-                                htmlContent += `<li>${session}</li>`;
-                            });
-                            htmlContent += "</ul>";
-                            scheduleDiv.innerHTML = htmlContent;
-                        } else {
-                            scheduleDiv.innerHTML = "<p>لا توجد مواعيد حصص حالياً.</p>";
-                        }
-                    } else {
-                        console.log("لم يتم العثور على بيانات المعلم.");
-                    }
-                }).catch((error) => {
-                    console.error("خطأ في جلب بيانات المعلم: ", error);
-                });
-            } else {
-                window.location.href = "login.html"; // توجيه المستخدم إلى صفحة تسجيل الدخول إذا لم يكن مسجلاً الدخول
-            }
+        const auth = getAuth();
+
+        document.querySelector(".btn").addEventListener("click", () => {
+            signOut(auth).then(() => {
+                window.location.href = "login.html";
+            }).catch((error) => {
+                alert("حدث خطأ أثناء تسجيل الخروج: " + error.message);
+            });
         });
     </script>
 </body>
