--- a/index.html
+++ b/index.html
@@ -3,173 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>أكاديمية التبيان</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+    <title>الصفحة الرئيسية</title>
     <style>
         body {
-            font-family: 'Cairo', sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(to bottom, #f0f8ff, #e6f7ff);
-            color: #333;
-        }
-
-        header {
-            background: #004d40;
-            color: #fff;
+            font-family: Arial, sans-serif;
+            background-color: #f0f4f8;
             text-align: center;
-            padding: 30px 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding-top: 50px;
         }
-
-        header h1 {
-            font-size: 2.8em;
-            margin: 0;
-            color: #fff;
+        h1 {
+            font-size: 3em;
+            color: #004e92;
         }
-
-        header p {
-            font-size: 1.2em;
-            margin: 10px 0;
-        }
-
-        .actions {
-            margin-top: 20px;
-        }
-
-        .actions a {
-            text-decoration: none;
-            color: #fff;
-            background: #009688;
-            padding: 12px 25px;
+        .btn {
+            background-color: #ff7e5f;
+            color: white;
+            padding: 15px 25px;
+            border: none;
+            cursor: pointer;
+            font-size: 1.5em;
             border-radius: 5px;
-            margin: 5px;
-            font-size: 1.1em;
-            transition: background 0.3s, box-shadow 0.3s;
         }
-
-        .actions a:hover {
-            background: #00796b;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-        }
-
-        .content {
-            padding: 50px 20px;
-            text-align: center;
-        }
-
-        .content h2 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            color: #004d40;
-        }
-
-        .content p {
-            font-size: 1.2em;
-            margin-bottom: 30px;
-        }
-
-        #student-reviews {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        #student-reviews li {
-            background: #e0f2f1;
-            margin: 15px auto;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-            font-size: 1.1em;
-            transition: background-color 0.3s;
-        }
-
-        #student-reviews li:hover {
-            background: #b2dfdb;
-        }
-
-        footer {
-            background: #004d40;
-            color: #fff;
-            text-align: center;
-            padding: 15px 20px;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        footer p {
-            margin: 0;
-        }
-
-        .animated-button {
-            animation: glow 1.5s infinite;
-        }
-
-        @keyframes glow {
-            0%, 100% {
-                box-shadow: 0 0 5px #fff;
-            }
-            50% {
-                box-shadow: 0 0 15px #fff;
-            }
-        }
-
-        /* تحسين التنسيق للأجهزة الصغيرة */
-        @media (max-width: 768px) {
-            header h1 {
-                font-size: 2em;
-            }
-
-            header p {
-                font-size: 1em;
-            }
-
-            .actions a {
-                font-size: 1em;
-                padding: 10px 20px;
-            }
-
-            .content h2 {
-                font-size: 2em;
-            }
-
-            .content p {
-                font-size: 1em;
-            }
+        .btn:hover {
+            background-color: #feb47b;
         }
     </style>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
 </head>
 <body>
     <header>
         <h1>أهلاً بكم في أكاديمية التبيان</h1>
-        <p>حيث يلتقي العلم بالإبداع!</p>
-        <div class="actions">
-            <a href="login.html" class="animated-button">تسجيل الدخول</a>
-            <a href="signup.html">التسجيل</a>
-        </div>
+        <button class="btn" onclick="window.location.href='login.html'">تسجيل الدخول</button>
+        <button class="btn" onclick="window.location.href='signup.html'">التسجيل</button>
     </header>
 
-    <section class="content">
-        <h2>آراء الطلاب</h2>
-        <p>نحن نقدم بيئة تعليمية متكاملة مع أكفأ المعلمين، حيث يلتقي العمل بالإتقان.</p>
-        <ul id="student-reviews">
-            <!-- آراء الطلاب ستضاف ديناميكيًا هنا -->
-        </ul>
-    </section>
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+        import { getAuth } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
 
-    <footer>
-        <p>جميع الحقوق محفوظة © أكاديمية التبيان</p>
-    </footer>
-
-    <script>
-        // إعداد Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
             authDomain: "taleem-6c9b2.firebaseapp.com",
@@ -179,23 +49,8 @@
             appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
         };
 
-        // Initialize Firebase
-        const app = firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
-
-        // أمثلة لآراء الطلاب
-        const reviews = [
-            "أكاديمية رائعة، تعلمت الكثير!",
-            "المعلمون محترفون ومتفانون.",
-            "أفضل تجربة تعليمية مررت بها على الإطلاق.",
-        ];
-
-        const reviewsList = document.getElementById('student-reviews');
-        reviews.forEach(review => {
-            const li = document.createElement('li');
-            li.textContent = review;
-            reviewsList.appendChild(li);
-        });
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth();
     </script>
 </body>
 </html>
