--- a/student.html
+++ b/student.html
@@ -1,178 +1,85 @@
 <!DOCTYPE html>
 <html lang="ar">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>صفحة الطالب</title>
-
-    <!-- ربط مكتبات Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
-
+    <title>لوحة تحكم الطالب</title>
     <style>
-        /* CSS لتنسيق الصفحة */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f7f6;
-            color: #333;
-            direction: rtl;
-        }
-
-        .container {
-            width: 90%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        header {
+            background-color: #f0f4f8;
             text-align: center;
-            margin-bottom: 30px;
+            padding-top: 50px;
         }
-
         h2 {
-            color: #2c7a2e;
-            font-size: 2.5em;
-            font-weight: bold;
-            text-transform: uppercase;
+            font-size: 2em;
+            color: #004e92;
         }
-
-        section {
-            background-color: #fff;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        h3 {
-            color: #3a3a3a;
-            font-size: 1.8em;
-            margin-bottom: 15px;
-        }
-
-        p {
-            font-size: 1.2em;
-        }
-
-        ul {
-            list-style-type: none;
-        }
-
-        ul li {
-            padding: 10px;
-            background-color: #e0f7da;
-            margin-bottom: 10px;
-            border-radius: 6px;
-        }
-
-        button {
+        .btn {
+            background-color: #ff7e5f;
+            color: white;
             padding: 10px 20px;
-            background-color: #2c7a2e;
-            color: #fff;
             border: none;
-            border-radius: 5px;
             cursor: pointer;
             font-size: 1.2em;
-            transition: background-color 0.3s;
+            border-radius: 5px;
         }
-
-        button:hover {
-            background-color: #1f5d1f;
-        }
-
-        input[type="file"] {
-            margin-bottom: 20px;
+        .btn:hover {
+            background-color: #feb47b;
         }
     </style>
 </head>
-
 <body>
-    <div class="container">
-        <header>
-            <h2>مرحبًا بك في صفحة الطالب</h2>
-        </header>
+    <header>
+        <h1>مرحباً، طالبنا العزيز</h1>
+    </header>
 
-        <section id="student-info">
-            <h3>الحصص المتبقية</h3>
-            <p id="remaining-sessions">جاري تحميل البيانات...</p>
-        </section>
+    <div>
+        <h2>دروسك الحالية</h2>
+        <ul>
+            <li>درس 1 - التفسير</li>
+            <li>درس 2 - قواعد اللغة العربية</li>
+        </ul>
 
-        <section id="monthly-offers">
-            <h3>العروض الشهرية</h3>
-            <ul>
-                <li>8 حصص - 80 SAR</li>
-                <li>12 حصة - 110 SAR</li>
-                <li>16 حصة - 140 SAR</li>
-            </ul>
-        </section>
-
-        <section id="payment-status">
-            <h3>إشعار دفع رسوم الاشتراك</h3>
-            <p id="payment-status-message">جاري تحميل حالة الدفع...</p>
-        </section>
-
-        <section id="upload-receipt">
-            <h3>رفع إيصال الدفع</h3>
-            <form id="upload-receipt-form" action="upload_receipt.php" method="post" enctype="multipart/form-data">
-                <input type="file" id="receipt" name="receipt" accept="image/*" required>
-                <button type="submit">رفع الإيصال</button>
-            </form>
-        </section>
+        <button id="logoutBtn" class="btn">تسجيل الخروج</button>
     </div>
 
-    <!-- إعداد Firebase والتفاعل مع Firestore -->
-    <script>
-        // إعدادات Firebase الخاصة بك
-  const firebaseConfig = {
-  apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
-  authDomain: "taleem-6c9b2.firebaseapp.com",
-  projectId: "taleem-6c9b2",
-  storageBucket: "taleem-6c9b2.firebasestorage.app",
-  messagingSenderId: "746506526783",
-  appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+        import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
 
-        // تهيئة Firebase
-        const app = firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
-        const auth = firebase.auth();
+        const firebaseConfig = {
+            apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
+            authDomain: "taleem-6c9b2.firebaseapp.com",
+            projectId: "taleem-6c9b2",
+            storageBucket: "taleem-6c9b2.firebasestorage.app",
+            messagingSenderId: "746506526783",
+            appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
+        };
 
-        // التحقق من حالة المستخدم (هل هو مسجل دخول أم لا)
-        auth.onAuthStateChanged(user => {
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth();
+
+        // التحقق من حالة المستخدم
+        onAuthStateChanged(auth, (user) => {
             if (user) {
-                // جلب بيانات الطالب من Firestore
-                const studentRef = db.collection('students').doc(user.uid);
-
-                studentRef.get().then(doc => {
-                    if (doc.exists) {
-                        const data = doc.data();
-                        
-                        // عرض الحصص المتبقية
-                        document.getElementById('remaining-sessions').innerText = `عدد الحصص المتبقية: ${data.remaining_classes}`;
-
-                        // عرض حالة الدفع
-                        const paymentStatus = data.payment_status === 'paid' ? 'تم دفع الرسوم بنجاح.' : 'لم يتم دفع الرسوم بعد.';
-                        document.getElementById('payment-status-message').innerText = paymentStatus;
-                    } else {
-                        console.log("لم يتم العثور على بيانات الطالب.");
-                    }
-                }).catch(error => {
-                    console.error("حدث خطأ في جلب البيانات: ", error);
-                });
+                // التحقق من الدور
+                if (!user.email.includes("student")) {
+                    window.location.href = "teacher-dashboard.html";  // إذا كان المستخدم ليس طالبًا يتم تحويله إلى لوحة تحكم المعلم
+                }
             } else {
-                // إذا لم يكن المستخدم مسجل دخول، يمكنك توجيهه إلى صفحة تسجيل الدخول
-                window.location.href = 'login.html';
+                window.location.href = "index.html";  // إذا لم يكن هناك مستخدم مسجل الدخول، يتم إعادة توجيههم إلى الصفحة الرئيسية
             }
+        });
+
+        // تسجيل الخروج
+        document.getElementById("logoutBtn").addEventListener("click", () => {
+            signOut(auth).then(() => {
+                window.location.href = "index.html";  // بعد تسجيل الخروج، يتم إعادة توجيه المستخدم إلى الصفحة الرئيسية
+            }).catch((error) => {
+                alert("حدث خطأ أثناء تسجيل الخروج: " + error.message);
+            });
         });
     </script>
 </body>
-
 </html>
