--- a/teacher.html
+++ b/teacher.html
@@ -4,87 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>لوحة تحكم المعلم</title>
-    <link rel="stylesheet" href="styles.css">
-    
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+    <style>
+        body { background-color: #f0f4f8; }
+    </style>
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>مرحبا بك، معلم أكاديمية التبيان</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">الرئيسية</a></li>
-                    <li><a href="profile.html">الملف الشخصي</a></li>
-                    <li><a href="logout.html">تسجيل الخروج</a></li>
-                </ul>
-            </nav>
-        </div>
+        <h1>مرحباً، أستاذنا الفاضل</h1>
     </header>
-    <main>
-        <div class="container">
-            <h2>لوحة تحكم المعلم</h2>
-            <p>هنا يمكنك مشاهدة مواعيد الحصص الخاصة بك.</p>
-            <div id="schedule" class="schedule"></div> <!-- سيتم عرض مواعيد الحصص هنا -->
-        </div>
-    </main>
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 أكاديمية التبيان</p>
-        </div>
-    </footer>
+
+    <div>
+        <h2>قائمة الطلاب</h2>
+        <ul>
+            <li>الطالب 1</li>
+            <li>الطالب 2</li>
+        </ul>
+    </div>
 
     <script>
-const firebaseConfig = {
-  apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
-  authDomain: "taleem-6c9b2.firebaseapp.com",
-  projectId: "taleem-6c9b2",
-  storageBucket: "taleem-6c9b2.firebasestorage.app",
-  messagingSenderId: "746506526783",
-  appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
-
-        // تهيئة Firebase
-        const app = firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
-        const firestore = firebase.firestore();
-
-        // التحقق من تسجيل الدخول
-        auth.onAuthStateChanged((user) => {
-            if (user) {
-                // استرجاع بيانات المعلم من Firestore
-                const userId = user.uid;
-                const teacherRef = firestore.collection("teachers").doc(userId);
-
-                teacherRef.get().then((doc) => {
-                    if (doc.exists) {
-                        // عرض مواعيد الحصص في الصفحة
-                        const data = doc.data();
-                        const schedule = data.schedule || [];
-                        
-                        const scheduleDiv = document.getElementById("schedule");
-                        if (schedule.length > 0) {
-                            let htmlContent = "<ul>";
-                            schedule.forEach(session => {
-                                htmlContent += `<li>${session}</li>`;
-                            });
-                            htmlContent += "</ul>";
-                            scheduleDiv.innerHTML = htmlContent;
-                        } else {
-                            scheduleDiv.innerHTML = "<p>لا توجد مواعيد حصص حالياً.</p>";
-                        }
-                    } else {
-                        console.log("لم يتم العثور على بيانات المعلم.");
-                    }
-                }).catch((error) => {
-                    console.error("خطأ في جلب بيانات المعلم: ", error);
-                });
-            } else {
-                window.location.href = "login.html"; // توجيه المستخدم إلى صفحة تسجيل الدخول إذا لم يكن مسجلاً الدخول
-            }
-        });
+        // إضافة وظائف إضافية أو تحديث البيانات من Firebase
     </script>
 </body>
 </html>
