--- a/signup.html
+++ b/signup.html
@@ -1,78 +1,43 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>التسجيل</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f4f8;
-            text-align: center;
-            padding-top: 50px;
-        }
-        input {
-            padding: 10px;
-            margin: 10px;
-            width: 80%;
-            font-size: 1.2em;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-        .btn {
-            background-color: #ff7e5f;
-            color: white;
-            padding: 15px 25px;
-            border: none;
-            cursor: pointer;
-            font-size: 1.5em;
-            border-radius: 5px;
-        }
-        .btn:hover {
-            background-color: #feb47b;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>التسجيل في أكاديمية التبيان</h1>
-    </header>
+<script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
+    import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
 
-    <div>
-        <input type="email" id="email" placeholder="البريد الإلكتروني" required>
-        <input type="password" id="password" placeholder="كلمة المرور" required>
-        <button id="signupBtn" class="btn">تسجيل</button>
-    </div>
+    const firebaseConfig = {
+        apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
+        authDomain: "taleem-6c9b2.firebaseapp.com",
+        projectId: "taleem-6c9b2",
+        storageBucket: "taleem-6c9b2.firebasestorage.app",
+        messagingSenderId: "746506526783",
+        appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
+    };
 
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-        import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth();
+    const db = getFirestore();
 
-        const firebaseConfig = {
-            apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
-            authDomain: "taleem-6c9b2.firebaseapp.com",
-            projectId: "taleem-6c9b2",
-            storageBucket: "taleem-6c9b2.firebasestorage.app",
-            messagingSenderId: "746506526783",
-            appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
-        };
+    document.getElementById('loginBtn').addEventListener('click', function() {
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
 
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth();
-
-        document.getElementById("signupBtn").addEventListener("click", () => {
-            const email = document.getElementById("email").value;
-            const password = document.getElementById("password").value;
-
-            createUserWithEmailAndPassword(auth, email, password)
-                .then((userCredential) => {
-                    alert("تم التسجيل بنجاح");
-                    window.location.href = "login.html";
-                })
-                .catch((error) => {
-                    alert("حدث خطأ: " + error.message);
+        signInWithEmailAndPassword(auth, email, password)
+            .then((userCredential) => {
+                const user = userCredential.user;
+                // التحقق من الدور
+                const userDocRef = doc(db, "users", user.uid);
+                getDoc(userDocRef).then((docSnap) => {
+                    if (docSnap.exists()) {
+                        const userData = docSnap.data();
+                        if (userData.role === "student") {
+                            window.location.href = "student-dashboard.html";
+                        } else if (userData.role === "teacher") {
+                            window.location.href = "teacher-dashboard.html";
+                        }
+                    }
                 });
-        });
-    </script>
-</body>
-</html>
+            })
+            .catch((error) => {
+                alert("خطأ في تسجيل الدخول: " + error.message);
+            });
+    });
+</script>
