--- a/login.html
+++ b/login.html
@@ -1,175 +1,43 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل الدخول</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f4f8;
-            text-align: center;
-            padding-top: 50px;
-            margin: 0;
-            box-sizing: border-box;
-        }
+<script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
+    import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
 
-        h1 {
-            font-size: 2.5em;
-            color: #004e92;
-            margin-bottom: 20px;
-        }
+    const firebaseConfig = {
+        apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
+        authDomain: "taleem-6c9b2.firebaseapp.com",
+        projectId: "taleem-6c9b2",
+        storageBucket: "taleem-6c9b2.firebasestorage.app",
+        messagingSenderId: "746506526783",
+        appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
+    };
 
-        .login-container {
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 40px;
-            width: 100%;
-            max-width: 400px;
-            margin: 0 auto;
-            opacity: 0;
-            animation: fadeIn 1s forwards;
-        }
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth();
+    const db = getFirestore();
 
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
+    document.getElementById('loginBtn').addEventListener('click', function() {
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
 
-        .input-group {
-            margin-bottom: 20px;
-            text-align: left;
-        }
-
-        .input-group input {
-            width: 100%;
-            padding: 10px;
-            border-radius: 5px;
-            border: 1px solid #ddd;
-            font-size: 1em;
-            transition: border 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .input-group input:focus {
-            border-color: #004e92;
-            box-shadow: 0 0 5px rgba(0, 78, 146, 0.6);
-            outline: none;
-        }
-
-        .btn {
-            background-color: #ff7e5f;
-            color: white;
-            padding: 12px 20px;
-            border: none;
-            cursor: pointer;
-            font-size: 1.2em;
-            border-radius: 5px;
-            width: 100%;
-            transition: background-color 0.3s ease, transform 0.3s ease;
-        }
-
-        .btn:hover {
-            background-color: #feb47b;
-            transform: scale(1.05);
-        }
-
-        footer {
-            margin-top: 20px;
-            font-size: 0.9em;
-            color: #333;
-        }
-
-        footer a {
-            color: #004e92;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>تسجيل الدخول إلى حسابك</h1>
-    </header>
-
-    <div class="login-container">
-        <div class="input-group">
-            <input type="email" id="email" placeholder="البريد الإلكتروني" required />
-        </div>
-
-        <div class="input-group">
-            <input type="password" id="password" placeholder="كلمة المرور" required />
-        </div>
-
-        <button id="loginBtn" class="btn">تسجيل الدخول</button>
-    </div>
-
-    <footer>
-        <p>ليس لديك حساب؟ <a href="signup.html">تسجيل جديد</a></p>
-    </footer>
-
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-        import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
-
-        const firebaseConfig = {
-            apiKey: "AIzaSyAtImiW_CiyzDqypdI4Ve8KIOqxC9TGRQE",
-            authDomain: "taleem-6c9b2.firebaseapp.com",
-            projectId: "taleem-6c9b2",
-            storageBucket: "taleem-6c9b2.firebasestorage.app",
-            messagingSenderId: "746506526783",
-            appId: "1:746506526783:web:2f2c24a0661f3c2bbc588a"
-        };
-
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth();
-
-        // تسجيل الدخول
-        document.getElementById('loginBtn').addEventListener('click', function() {
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-
-            signInWithEmailAndPassword(auth, email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-                    // التحقق من الدور بعد تسجيل الدخول
-                    checkUserRole(user);
-                })
-                .catch((error) => {
-                    alert('خطأ في تسجيل الدخول: ' + error.message);
-                });
-        });
-
-        // التحقق من الدور
-        function checkUserRole(user) {
-            // التحقق من البريد الإلكتروني المستخدم لتحديد الدور
-            if (user.email.includes("student")) {
-                setTimeout(() => {
-                    window.location.href = "student-dashboard.html"; // إذا كان الطالب
-                }, 500); // الانتقال بعد فترة قصيرة لإضافة تأثير الانتقال
-            } else if (user.email.includes("teacher")) {
-                setTimeout(() => {
-                    window.location.href = "teacher-dashboard.html"; // إذا كان المعلم
-                }, 500); // الانتقال بعد فترة قصيرة لإضافة تأثير الانتقال
-            } else {
-                alert("البريد الإلكتروني غير مرتبط بأي دور");
-            }
-        }
-
-        // التحقق من حالة المستخدم الحالي
-        onAuthStateChanged(auth, (user) => {
-            if (user) {
+        signInWithEmailAndPassword(auth, email, password)
+            .then((userCredential) => {
+                const user = userCredential.user;
                 // التحقق من الدور
-                checkUserRole(user);
-            }
-        });
-    </script>
-</body>
-</html>
+                const userDocRef = doc(db, "users", user.uid);
+                getDoc(userDocRef).then((docSnap) => {
+                    if (docSnap.exists()) {
+                        const userData = docSnap.data();
+                        if (userData.role === "student") {
+                            window.location.href = "student-dashboard.html";
+                        } else if (userData.role === "teacher") {
+                            window.location.href = "teacher-dashboard.html";
+                        }
+                    }
+                });
+            })
+            .catch((error) => {
+                alert("خطأ في تسجيل الدخول: " + error.message);
+            });
+    });
+</script>
